--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,3 +9,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the project
       run: docker compose build
+
+    - name: Test the project with RSpec
+      run: docker compose run web bundle exec rspec spec
